# pkgcheck

./: .buildinfo  .bzrignore  .coveragerc  .git-blame-ignore-revs  .gitignore  .pylintrc  .readthedocs.yml  .travis.yml  AUTHORS  BSD  COPYING  Dockerfile  HACKING  HACKING.rst  LICENSE  MANIFEST.in  Makefile  NEWS  NEWS.rst  README  README.rst  TODO  api.html  build_api_docs.sh  config.html  genindex.html  index.html  man.html  news.html  objects.inv  pcheck  pkgdist.py  py-modindex.html  py_build.py  pylintrc  pyproject.toml  replay-pcheck-stream  requirements.txt  runner.py  search.html  (+4 more)
.github/ISSUE_TEMPLATE/: bug-commits.yml  bug.yml  feature-request.md  new-check.yml
.github/workflows/: bash.sh  doc.yml  lint.yml  manylinux.sh  release.yml  test.yml
_modules/: index.html
_modules/pkgcheck/: addons.html  api.html  argparsers.html  base.html  caches.html  checks.html  cli.html  eclass.html  feeds.html  git.html  net.html  packages.html  pipeline.html  profiles.html  reporters.html  results.html  sources.html  utils.html
_modules/snakeoil/: klass.html  mappings.html
_sources/: api.rst.txt  man.rst.txt  news.rst.txt
_sources/api/: pkgcheck.addons.rst.txt  pkgcheck.api.rst.txt  pkgcheck.argparsers.rst.txt  pkgcheck.base.rst.txt  pkgcheck.caches.rst.txt  pkgcheck.checks.acct.rst.txt  pkgcheck.checks.cleanup.rst.txt  pkgcheck.checks.codingstyle.rst.txt  pkgcheck.checks.dropped_keywords.rst.txt  pkgcheck.checks.eclass.rst.txt  pkgcheck.checks.git.rst.txt  pkgcheck.checks.glsa.rst.txt  pkgcheck.checks.header.rst.txt  pkgcheck.checks.imlate.rst.txt  pkgcheck.checks.metadata.rst.txt  pkgcheck.checks.metadata_xml.rst.txt  pkgcheck.checks.network.rst.txt  pkgcheck.checks.overlays.rst.txt  pkgcheck.checks.perl.rst.txt  pkgcheck.checks.pkgdir.rst.txt  pkgcheck.checks.profiles.rst.txt  pkgcheck.checks.python.rst.txt  pkgcheck.checks.repo.rst.txt  pkgcheck.checks.repo_metadata.rst.txt  pkgcheck.checks.rst.txt  pkgcheck.checks.stablereq.rst.txt  pkgcheck.checks.unstable_only.rst.txt  pkgcheck.checks.visibility.rst.txt  pkgcheck.checks.whitespace.rst.txt  pkgcheck.cli.rst.txt  pkgcheck.const.rst.txt  pkgcheck.eclass.rst.txt  pkgcheck.feeds.rst.txt  pkgcheck.git.rst.txt  pkgcheck.log.rst.txt  pkgcheck.net.rst.txt  pkgcheck.objects.rst.txt  pkgcheck.packages.rst.txt  pkgcheck.pipeline.rst.txt  pkgcheck.profiles.rst.txt  (+5 more)
_sources/man/: pkgcheck.rst.txt
api/: pkgcheck.addons.html  pkgcheck.api.html  pkgcheck.argparsers.html  pkgcheck.base.html  pkgcheck.caches.html  pkgcheck.checks.acct.html  pkgcheck.checks.cleanup.html  pkgcheck.checks.codingstyle.html  pkgcheck.checks.dropped_keywords.html  pkgcheck.checks.eclass.html  pkgcheck.checks.git.html  pkgcheck.checks.glsa.html  pkgcheck.checks.header.html  pkgcheck.checks.html  pkgcheck.checks.imlate.html  pkgcheck.checks.metadata.html  pkgcheck.checks.metadata_xml.html  pkgcheck.checks.network.html  pkgcheck.checks.overlays.html  pkgcheck.checks.perl.html  pkgcheck.checks.pkgdir.html  pkgcheck.checks.profiles.html  pkgcheck.checks.python.html  pkgcheck.checks.repo.html  pkgcheck.checks.repo_metadata.html  pkgcheck.checks.stablereq.html  pkgcheck.checks.unstable_only.html  pkgcheck.checks.visibility.html  pkgcheck.checks.whitespace.html  pkgcheck.cli.html  pkgcheck.const.html  pkgcheck.eclass.html  pkgcheck.feeds.html  pkgcheck.git.html  pkgcheck.html  pkgcheck.log.html  pkgcheck.net.html  pkgcheck.objects.html  pkgcheck.packages.html  pkgcheck.pipeline.html  (+5 more)
completion/bash/: pkgcheck
completion/zsh/: _pkgcheck
contrib/emacs/: flycheck-pkgcheck.el
data/: ci.sh  perl-version.pl  pkgcheck.conf
dev/: hacking.html  todo.html
doc/: Makefile  api.rst  conf.py  config.rst  index.rst
doc/dev/: hacking.rst  todo.rst
doc/man/: config.rst  pkgcheck.rst  skip.rst
man/: pkgcheck.html
man/pkgcheck/: _description.html  _options.html  _subcommands.html  _synopsis.html  cache.html  checks.html  keywords.html  replay.html  reporters.html  scan.html  show.html
pkgcheck/: __init__.py  addons.py  base.py  cleanup.py  cli.py  codingstyle.py  deprecated.py  dropped_keywords.py  errors.py  feeds.py  glsa_scan.py  imlate.py  metadata_checks.py  metadata_xml.py  pcheck.py  pkgdir_checks.py  repo_metadata.py  report_stream.py  reporters.py  stale_unstable.py  unstable_only.py  visibility.py  whitespace.py
pkgcheck/plugins/: __init__.py  core_checks.py  pcheck_config.py  pcheck_configurables.py  pkgcheck_config.py  pkgcheck_configurables.py  plugincache
pkgcheck/scripts/: __init__.py  pkgcheck.py  pkgcheck_replay_stream.py
pkgcheck/test/: misc.py  test_addons.py  test_base.py  test_cleanup.py  test_codingstyle.py  test_demandload_usage.py  test_deprecated.py  test_dropped_keywords.py  test_glsa.py  test_imlate.py  test_metadata_checks.py  test_pcheck.py  test_pkgcheck.py  test_pkgdir_checks.py  test_stale_unstable.py  test_whitespace.py
pkgcore/plugins/: pcheck_config.py  pcheck_configurables.py
pkgcore_checks/: __init__.py  addons.py  base.py  cleanup.py  codingstyle.py  deprecated.py  dropped_keywords.py  errors.py  feeds.py  glsa_scan.py  imlate.py  metadata_checks.py  metadata_xml.py  options.py  pcheck.py  pkgdir_checks.py  repo_metadata.py  report_stream.py  reporters.py  stale_unstable.py  unported_mod_x.py  unstable_only.py  use_flags.py  util.py  visibility.py  whitespace.py
pkgcore_checks/plugins/: __init__.py  core_checks.py  pcheck_config.py
refs/heads/: deploy  (+4 more)
reports/: arches.py  base.py  deprecated.py  dropped_keywords.py  glsa_scan.py  imlate.py  metadata_checks.py  metadata_xml.py  stale_unstable.py  unstable_only.py  util.py  visibility.py
requirements/: build.txt  dev.txt  install.txt  pip.sh  pyproject.toml  readthedocs.txt  release.txt
testdata/: pkgcheck
tests/: conftest.py  misc.py  pkgcheck  test_addons.py  test_api.py  test_base.py  test_cleanup.py  test_cli.py  test_codingstyle.py  test_deprecated.py  test_dropped_keywords.py  test_feeds.py  test_glsa.py  test_imlate.py  test_metadata_checks.py  test_pkgcheck.py  test_pkgdir_checks.py  test_reporters.py  test_stale_unstable.py  test_whitespace.py
(+2116 files in other folders)
