[build-system]
requires = [
	"setuptools >= 61.0.0",
	"wheel",
	# repeat all normal runtime dependencies here
	"chardet",
	"lazy-object-proxy",
	"lxml",
	"pathspec",
	"tree-sitter>=0.19.0",
	"snakeoil~=0.10.4",
	"pkgcore~=0.12.18",
]
build-backend = "setuptools.build_meta"

[project]
name = "pkgcheck"
description = "pkgcore-based QA utility for ebuild repos"
readme = "README.rst"
license = {file = "LICENSE"}
requires-python = "~=3.9"
authors = [
	{name = "Tim Harder", email = "radhermit@gmail.com"},
	{name = "Arthur Zamarin", email = "arthurzam@gentoo.org"},
]
maintainers = [
	{name = "Arthur Zamarin", email = "arthurzam@gentoo.org"},
]
classifiers = [
	"License :: OSI Approved :: BSD License",
	"Programming Language :: Python :: 3.9",
	"Programming Language :: Python :: 3.10",
	"Programming Language :: Python :: 3.11",
]
dynamic = ["version"]

dependencies = [
	"chardet",
	"lazy-object-proxy",
	"lxml",
	"pathspec",
	"tree-sitter>=0.19.0",
	"snakeoil~=0.10.4",
	"pkgcore~=0.12.18",
]

[project.optional-dependencies]
test = [
	"pytest>=6.0",
	"pytest-cov",
	"requests",
]
doc = [
	"sphinx",
	"tomli; python_version < '3.11'",
	"snakeoil~=0.10.4",
]
network = [
	"requests",
]

[project.urls]
Homepage = "https://github.com/pkgcore/pkgcheck"
Documentation = "https://pkgcore.github.io/pkgcheck/"
Source = "https://github.com/pkgcore/pkgcheck"

[project.scripts]
pkgcheck = "pkgcheck.scripts.__init__:main"

[tool.setuptools]
zip-safe = false

[tool.setuptools.dynamic]
version = {attr = "pkgcheck.__version__"}

[tool.black]
line-length = 100

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-vv -ra -l"
testpaths = ["tests"]

[tool.cibuildwheel]
build = "cp310-*"
build-frontend = "build"

before-build = [
	"rm -f {project}/src/pkgcheck/bash/lang.so"
]
test-requires = ["pytest", "requests"]
test-command = "pytest {project}/tests"

# glibc 2.24
manylinux-x86_64-image = "manylinux_2_24"
manylinux-i686-image = "manylinux_2_24"
manylinux-aarch64-image = "manylinux_2_24"
manylinux-ppc64le-image = "manylinux_2_24"
manylinux-s390x-image = "manylinux_2_24"
test-skip = "*-*linux_{aarch64,ppc64le,s390x}"

[[tool.cibuildwheel.overrides]]
select = "*-musllinux*"
before-all = [
	"apk add --no-cache git bash libxml2-dev libxslt-dev",
]

[[tool.cibuildwheel.overrides]]
select = "*-manylinux*"
before-all = [
	"apt-get update",
	"apt-get install -y git libxml2-dev libxslt-dev",
	# "yum update -y",
	# "yum install -y git libxslt-devel libxml2-devel",

	"curl -L \"https://github.com/robxu9/bash-static/releases/download/5.1.016-1.2.3/bash-linux-$(uname -m)\" -o /usr/local/bin/bash",
	"chmod +x /usr/local/bin/bash",
]
